Store shell command output to string buffer